# openvpn3

./: CMakeLists.txt  README.rst  wintun.7z
.github/workflows/: msbuild.yml
cmake/: findcoredeps.cmake
openvpn/client/: cliopt.hpp
openvpn/common/: getopt.hpp
openvpn/frame/: frame.hpp  frame_init.hpp
openvpn/tun/win/: tunutil.hpp
openvpn/tun/win/client/: tuncli.hpp
test/unittests/: unittests.vcxproj
win/: ovpn3-core.sln  ovpn3-core.vcxproj
